<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.jgsoftware</groupId>
    <artifactId>JDesktop</artifactId>
    <version>1.0-SNAPSHOT</version>
    
    <packaging>jar</packaging>
     <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.9.RELEASE</version>
        <relativePath/>
    </parent>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>15</maven.compiler.source>
        <maven.compiler.target>15</maven.compiler.target>
    </properties>
    
  
    <repositories>
      <repository>
          <id>BASE64Decoder</id>
          <url>https://github.com/demogitjava/demodatabase/raw/master/sun.misc.BASE64Decoder.jar</url>
          <snapshots>
              <enabled>true</enabled>
              <updatePolicy>always</updatePolicy>
          </snapshots>
      </repository>
  </repositories>
    
    <dependencies>   
        
<!-- https://mvnrepository.com/artifact/com.github.jiconfont/jiconfont-font_awesome -->
        
          <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-devtools</artifactId>
        <optional>true</optional>
               <version>2.5.0</version>
               <type>jar</type>
          </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-autoconfigure</artifactId>
            <version>2.0.2.RELEASE</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>5.0.4.RELEASE</version>
            <type>jar</type>
        </dependency>
        
                <dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>	
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>	
		</dependency>

		
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
		</dependency>
                <dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
                
                <!-- https://mvnrepository.com/artifact/net.sourceforge.barbecue/barbecue -->
                <dependency>
                    <groupId>net.sourceforge.barbecue</groupId>
                    <artifactId>barbecue</artifactId>
                    <version>1.5-beta1</version>
                </dependency>
                
                <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
<dependency>
    <groupId>com.google.code.gson</groupId>
    <artifactId>gson</artifactId>
    <version>2.8.5</version>
</dependency>

 <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
            
      
        <!-- https://mvnrepository.com/artifact/javax.mail/mail -->
        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>mail</artifactId>
            <version>1.4</version>
        </dependency>


        
        <dependency>
  <groupId>com.github.jiconfont</groupId>
  <artifactId>jiconfont-swing</artifactId>
  <version>1.0.0</version>
            <type>jar</type>
        </dependency>
                <dependency>
                        <groupId>com.github.jiconfont</groupId>
                        <artifactId>jiconfont-font_awesome</artifactId>
                        <version>4.7.0.0</version>
                        <type>jar</type>
                </dependency>
                
                <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
<dependency>
    <groupId>org.jsoup</groupId>
    <artifactId>jsoup</artifactId>
    <version>1.8.3</version>
</dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-webmvc</artifactId>
                <version>3.2.4.RELEASE</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>1.13</version>
                  <type>jar</type>
            </dependency>

             
            <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-webflux</artifactId>
            </dependency>
                <dependency>
                        <groupId>org.apache.httpcomponents</groupId>
                        <artifactId>httpclient</artifactId>
                        <version>4.5.13</version>
                        <type>jar</type>
                </dependency>
                
                  <dependency>
            <groupId>org.springframework.session</groupId>
            <artifactId>spring-session-jdbc</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.shell</groupId>
            <artifactId>spring-shell-starter</artifactId>
            <version>2.0.0.RELEASE</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.springframework.integration/spring-integration-zip -->
        <dependency>
            <groupId>org.springframework.integration</groupId>
            <artifactId>spring-integration-zip</artifactId>
            <version>1.0.4.RELEASE</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>1.0</version>
        </dependency>
        
<!-- https://mvnrepository.com/artifact/net.java.dev.nimbus/nimbus -->
<dependency>
    <groupId>net.java.dev.nimbus</groupId>
    <artifactId>nimbus</artifactId>
    <version>weekly-080113</version>
</dependency>


       
    </dependencies>   
        
    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <name>Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <updatePolicy>never</updatePolicy>
            </releases>
        </pluginRepository>
    </pluginRepositories>
              
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>2.4.5</version>
                <configuration>
                    <mainClass>de.jgsoftware.UserRegistrationSystemApplication</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>